<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <!--    자동완성 아이디 입력  250P-->
            <AutoCompleteTextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:id="@+id/idTextView"
                android:hint="@string/id"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:background="@drawable/layer"
                android:lines="1"
                android:inputType="text"
                android:completionThreshold="3"
                android:nextFocusDown="@+id/pwTextView"
                android:imeOptions="actionNext"/>
            <EditText
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/pwTextView"
                android:lines="1"
                android:hint="@string/pw"
                android:layout_margin="10dp"
                android:padding="5dp"
                android:layout_gravity="center"
                android:inputType="textPassword"
                android:background="@drawable/layer"
                android:imeOptions="actionDone"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.9"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="2"
                android:text="@string/guest"
                android:id="@+id/loginGuest"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:layout_margin="10dp"
                android:text="@string/submit"
                android:id="@+id/loginSubmit"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2.2"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"/>
</LinearLayout>